updated securityconfig